-Addition for description popup iframe (to block browser components in IE6)
svn changeset:307 branch:toolkit

--- a/WebContent/WEB-INF/lib/themes/base/css/base-ajax.css
+++ b/WebContent/WEB-INF/lib/themes/base/css/base-ajax.css
@@ -144,6 +144,10 @@ IMG.overlay {
 	font-size: 0.9em;
 	overflow: auto;
 }
+#popup-blocker-iframe {
+	border: none;
+	background-color: transparent;
+}
 
 /* COMPONENTS */
 
