-Base theme .border background-color overriden to transparent.
svn changeset:309 branch:toolkit

--- a/WebContent/WEB-INF/lib/themes/corporate/css/corporate-ajax.css
+++ b/WebContent/WEB-INF/lib/themes/corporate/css/corporate-ajax.css
@@ -3,6 +3,16 @@
  * ------------------------------------------------- *
  * Corporate theme stylesheet (Ajax-version)         *
  *****************************************************/
+ 
+ /**
+  * Base theme overrides
+  * --------------------
+  */
+  
+ .border {
+ 	background-color: transparent;
+ }
+ 
 
 /**
  * Background 
