--- a/WebContent/WEB-INF/lib/themes/base/css/base-ajax.css
+++ b/WebContent/WEB-INF/lib/themes/base/css/base-ajax.css
@@ -174,6 +174,14 @@ IMG.overlay {
 	text-decoration: underline;
 }
 
+.button .down .border {
+	border-top-color: ButtonShadow;
+	border-left-color: ButtonShadow;
+	border-bottom-color: ThreeDHighlight;
+	border-right-color: ThreeDHighlight;
+	
+}
+
 /* DateField */
 .datefield .btn {
 	background-color: ButtonFace;
