--- a/WebContent/WEB-INF/lib/themes/base/css/base-ajax.css
+++ b/WebContent/WEB-INF/lib/themes/base/css/base-ajax.css
@@ -129,7 +129,7 @@ IMG.overlay {
 }
 .popup .border {
 	border: 1px solid InfoText;
-	background-color: InfoBackground;
+	background-color: #ffffe1; // InfoBackground - doesn't work on Mac (black);
 	padding: 4px;
 }
 .popup .caption {
@@ -138,7 +138,7 @@ IMG.overlay {
 .popup * {
 	/*white-space: nowrap;*/ /* Really, there's no point doing it like this. If we need nowrap, we define it in the content that needs it, not on all. */
 	color: InfoText;
-	background-color: InfoBackground;
+	background-color: #ffffe1; // InfoBackground - doesn't work on Mac (black);
 }
 .popup .error {
 	font-size: 0.9em;
