--- a/WebContent/WEB-INF/lib/themes/corporate/css/corporate-ajax.css
+++ b/WebContent/WEB-INF/lib/themes/corporate/css/corporate-ajax.css
@@ -13,14 +13,27 @@
  	background-color: transparent;
  }
  
+ .caption .description {
+ 	display: none;
+ }
+ 
+ .caption {
+ 	cursor: default;
+ }
+ 
 
 /**
- * Background 
- * ----------
+ * Backgrounds
+ * -----------
  */
 
 html {
     background: #e7eaf0 url(../img/common/application_bg.png) repeat-x 0 0;
+}
+
+.popup *,
+.popup .border {
+	background-color: #fbffdc;
 }
 
 /**
@@ -35,8 +48,31 @@ input, select, button, html {
     color: #2c3437;
 }
 
-.caption img {
-	vertical-align: middle;
+/* Headers */
+h1 {
+	font-size: 2.6em;
+	color: #677b7f;
+	font-weight: normal;
+	letter-spacing: -0.02em;
+}
+
+h2 {
+	font-size: 2em;
+	color: #677b7f;
+	font-weight: normal;
+}
+
+h3 {
+	font-size: 1.7em;
+	color: #57859e;
+	font-weight: normal;
+	letter-spacing: 0.02em;
+}
+
+h4 {
+	font-size: 1.2em;
+	color: #5a6f73;
+	text-transform: uppercase;
 }
 
 /**
@@ -248,6 +284,11 @@ input, select, button, html {
 	background: transparent url(../img/button/right_down.png) no-repeat right top;
 }
 
+/* Checkbox bg override from base theme */
+.button .nocappad input {
+	background: transparent;
+}
+
 
 /**
  * Input (textfield)
@@ -262,6 +303,7 @@ input, select, button, html {
 	border: solid 1px #8fa5b3;
 	padding: 2px 3px;
 }
+
 
 
 /**
@@ -353,6 +395,16 @@ input, select, button, html {
 	background-color: #f0f4f9;
 }
 
+.table tr.selected {
+	font-weight: normal;
+	background-color: #faffd1;
+}
+
+.table .cin td.tablecell {
+	padding-top: 1px;
+	padding-bottom: 1px;
+}
+
 .table .cin td.tablecell div.cellContent {
 	border-right-color: #e3e7f0;
 }
@@ -377,4 +429,9 @@ input, select, button, html {
 
 .table .cout div.spacer {
 	background-color: #fff;
+}
+
+.table .tablestatus {
+	text-align: center;
+	background-color: #fbffdc;
 }
